// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagInput > should renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_0_"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="true"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly readOnly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="true"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_8_"
              readonly=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="true"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              aria-describedby="_r_p_"
              class="styles__sjgcm26"
              data-size="large"
              id="_r_o_"
              type="text"
              value=""
            />
          </div>
          <div
            class="styles__sjgcm25"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                AlertCircleIcon
              </title>
              <path
                clip-rule="evenodd"
                d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_p_"
        role="status"
      >
        This is an error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_c_"
      >
        Label
      </label>
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_c_"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_i_"
        />
        <div>
          label description
        </div>
      </div>
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_i_"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_14_"
              placeholder="Enter a value here"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with some tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <div
              class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
            >
              <span
                class="styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_closable_true__d6zknp9"
              >
                <span
                  class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  hello
                </span>
              </span>
              <button
                aria-label="Close tag"
                class="styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_true__d6zknph styles_undefined_compound_16__d6zknpz"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CloseIcon
                  </title>
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
            >
              <span
                class="styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_closable_true__d6zknp9"
              >
                <span
                  class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  world
                </span>
              </span>
              <button
                aria-label="Close tag"
                class="styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_true__d6zknph styles_undefined_compound_16__d6zknpz"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CloseIcon
                  </title>
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_18_"
              name="radio"
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with some tags objects 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <div
              class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
            >
              <span
                class="styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_closable_true__d6zknp9"
              >
                <span
                  class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  hello
                </span>
              </span>
              <button
                aria-label="Close tag"
                class="styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_true__d6zknph styles_undefined_compound_16__d6zknpz"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CloseIcon
                  </title>
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
            >
              <span
                class="styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_closable_true__d6zknp9"
              >
                <span
                  class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  world
                </span>
              </span>
              <button
                aria-label="Close tag"
                class="styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_true__d6zknph styles_undefined_compound_16__d6zknpz"
                data-testid="close-tag"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    CloseIcon
                  </title>
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
            <input
              class="styles__sjgcm26"
              data-size="large"
              id="_r_1k_"
              name="radio"
              placeholder=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagInput > should renders correctly with success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div>
        <div
          class="styles__sjgcm20 styles_size_large__sjgcm21"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="true"
          tabindex="0"
        >
          <div
            class="styles__sjgcm24"
          >
            <input
              aria-describedby="_r_v_"
              class="styles__sjgcm26"
              data-size="large"
              id="_r_u_"
              type="text"
              value=""
            />
          </div>
          <div
            class="styles__sjgcm25"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzg uv_icons_1sbwqkz1j"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                CheckCircleOutlineIcon
              </title>
              <path
                clip-rule="evenodd"
                d="M8 2.273a5.727 5.727 0 1 0 0 11.454A5.727 5.727 0 0 0 8 2.273M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m9.491-2.109a.636.636 0 0 1 .148.888l-2.651 3.712a.636.636 0 0 1-.968.08l-1.591-1.59a.636.636 0 0 1 .9-.9l1.06 1.06 2.214-3.102a.636.636 0 0 1 .888-.148"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_success__m4c9owe style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_56__m4c9ow2u"
        id="_r_v_"
        role="status"
      >
        This is a success
      </span>
    </div>
  </div>
</DocumentFragment>
`;
